--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@500&display=swap');*/
 
-
-body{
+body {
     margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
-    background-color: #000000;
-    
-    
-   
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    background-color: #fff;
 }
-#profile{
-    background-image: url("../assets/wdsb.png"); /**definindo a imagem de perfil*/
+
+#profile {
+    background-image: url("../assets/wdsb.png");
+    /**definindo a imagem de perfil*/
     background-size: cover;
     justify-content: center;
     background-position-x: 75%;
@@ -24,31 +22,26 @@ body{
     width: 300px;
     /*border-radius: 50%;*/
     -webkit-box-shadow: 10px 10px 20px -1px rgb(0 0 0 / 45%);
-    
 }
-#name{
+
+#name {
     text-align: center;
 }
-#empresa{
+
+#empresa {
     font-family: 'Arial';
     font-size: 70px;
     margin-top: 30px;
-    color: #ffff;
+    color: #000;
 }
-#soft{
-    margin-top: -35px;
-    font-size: 35px;
-    font-weight: 600;
-    font-family: 'Arial';
-    color: #000000;
-}
-header{
+
+header {
     background-image: url(../assets/bg.png);
     background-position: center;
-    
 }
-#sobreNos{
-    color: white;
+
+#sobreNos {
+    color: black;
     text-align: center;
     margin-top: 5%;
     background-repeat: no-repeat;
@@ -56,23 +49,73 @@ header{
     padding: 5px 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-#sobre{
+
+#sobre {
     margin-top: -6px;
     font-size: 40px;
-    color: #ffff;
+    color: #000;
     font-family: Arial, Helvetica, sans-serif;
 }
-#description{
+
+#description {
     font-size: 20px;
     display: flex;
     margin-left: 25%;
     margin-right: 25%;
     margin-top: 20px;
     text-align: left;
-
+    text-align: justify;
 }
-#sobreNos img{
+
+#sobreNos img {
     width: 250px;
     border-radius: 2.5rem;
-    
+}
+
+.header {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    height: 2rem;
+    text-align: center;
+}
+
+.header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    ;
+}
+
+.navbar {
+    width: 100%;
+    height: 2.5rem;
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.header ul li {
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#lg_home {
+    margin-top: 5px;
+    font-size: 20px;
+}
+
+.header ul li a {
+    margin: 1px 5px 1px;
+    display: inline-block;
+    color: rgb(153, 153, 153);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: Arial;
+    font-weight: bold;
+}
+
+.header li a:hover {
+    color: white;
 }
