--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,18 @@ body {
     margin: 0 0 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     background-color: #fff;
-    
 }
+
 
 /*navbar*/
 
 .navbar {
     width: 100%;
     height: 2.5rem;
-    background:black;
+    background: black;
     position: fixed;
 }
+
 .header {
     align-items: center;
     justify-content: center;
@@ -28,15 +29,18 @@ body {
     overflow: hidden;
     ;
 }
+
 .header ul li {
     display: inline;
     margin-left: auto;
     margin-right: auto;
 }
+
 #lg_home {
     margin-top: 5px;
     font-size: 20px;
 }
+
 .header ul li a {
     margin: 1px 5px 1px;
     display: inline-block;
@@ -47,9 +51,11 @@ body {
     font-family: Arial;
     font-weight: bold;
 }
+
 .header li a:hover {
     color: white;
 }
+
 
 /*logo*/
 
@@ -68,10 +74,12 @@ body {
     /*border-radius: 50%;*/
     -webkit-box-shadow: 10px 10px 20px -1px rgb(0 0 0 / 45%);
 }
+
 header {
     background-image: url(../assets/bg.png);
     background-position: center;
 }
+
 
 /*sobrenos*/
 
@@ -80,17 +88,20 @@ header {
     text-align: center;
     margin-top: 5%;
     padding: 5px 0;
-}   
+}
+
 .sobre {
     margin-top: -6px;
     font-size: 40px;
     color: #000;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .sobreNos img {
     width: 250px;
     border-radius: 2.5rem;
 }
+
 .description {
     font-size: 20px;
     display: flex;
@@ -101,6 +112,7 @@ header {
     text-align: justify;
 }
 
+
 /*desenvolvimento*/
 
 .desenvolvimento {
@@ -108,44 +120,64 @@ header {
     text-align: center;
     padding: 5px 0;
 }
-.desenvolvimento img{
+
+.desenvolvimento img {
     width: 20rem;
     margin-top: 10px;
 }
 
 
 /*teste*/
+
 .estrategia {
     color: black;
     text-align: center;
     padding: 5px 0;
-}   
+}
 
-.estrategia img{
+.estrategia img {
     width: 20rem;
     margin-top: 10px;
     border-radius: 50px;
 }
 
+
 /*prototipo*/
+
 .prototipo {
     color: black;
     text-align: center;
     padding: 5px 0;
-}   
+}
 
-.prototipo img{
+.prototipo img {
     width: 20rem;
     margin-top: 10px;
-   
 }
-.cod{
+
+.cod {
     text-align: center;
 }
 
 
+/*Caso de Uso*/
 
+.caso_de_uso {
+    color: black;
+    text-align: center;
+    padding: 5px 0;
+}
 
+.caso_de_uso h2 {
+    margin-top: 3rem;
+}
 
+.caso_de_uso img {
+    width: 20rem;
+    margin-top: 20px;
+}
 
-
+.casoimg img {
+    width: 75rem;
+    box-shadow: 0.5px 0.5px 16px 2px black;
+}
