--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,8 @@ header {
 .description {
     font-size: 20px;
     display: flex;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 100px;
+    margin-right: 100px;
     margin-top: 20px;
     text-align: left;
     text-align: justify;
